# quelltest-lib

./: CONTEXT.md  PROGRESS.md  README.md  action.yml  llms.txt  pyproject.toml  quell_spec2.md
.github/workflows/: ci.yml  quell-pr.yml  release.yml
connector/: Dockerfile  dashboard_client.py  fly.toml  main.py  mcp_server.py  models.py  oauth.py  requirements.txt
connector/middleware/: __init__.py  auth.py  rate_limit.py
connector/tests/: __init__.py  test_integration.py  test_mcp_tools.py  test_oauth.py
docs/: changelog.md  cli.md  configuration.md  github-integration.md  how-it-works.md  index.md  quickstart.md
quell/: __init__.py  cli.py  mcp_server.py  sdk.py
quell/adapters/: mutmut_adapter.py
quell/auth/: __init__.py  oauth.py  storage.py
quell/ci/: __init__.py  diff_parser.py  reporter.py  runner.py  threshold.py
quell/core/: generator.py  models.py  scaffold.py  verifier.py  writer.py
quell/core/confidence/: __init__.py  badge.py  prs.py  score.py
quell/core/gates/: __init__.py  gate1_ast.py  gate2_originality.py  gate3_security.py  gate4_pass_correct.py  gate5_fail_violated.py
quell/env/: __init__.py  detector.py
quell/github/: app.py  formatter.py  pr_runner.py
quell/graph/: __init__.py  builder.py  query.py  schema.sql
quell/infra/: __init__.py  engine.py  fixture_gen.py  lockfile.py  resolver.py  specs.py
quell/llm/: client.py
quell/llm/providers/: groq_provider.py
quell/repair/: __init__.py  engine.py
quell/report/: __init__.py  generator.py
quell/score/: __init__.py  badge.py  calculator.py  tracker.py
quell/scoring/: __init__.py  confidence.py
quell/spec/: code_guard_reader.py  docstring_reader.py
quell/sync/: __init__.py  client.py  models.py  payload.py  sanitizer.py
quell/synthesis/: app_locator.py  framework_detector.py  framework_engine.py  pyspark_rule_engine.py  rule_engine.py  sig_inspector.py
quell/ui/: console.py
scripts/: create_issues.py
tests/adapters/: test_mutmut_adapter.py
tests/ci/: test_diff_parser.py
tests/integration/: test_end_to_end.py  test_quell_find.py
tests/score/: test_badge.py  test_calculator.py
tests/unit/: test_auth.py  test_auth_storage.py  test_bucketed_output.py  test_cli_graph.py  test_confidence.py  test_confidence_scorer.py  test_deprecated_commands.py  test_docstring_reader.py  test_env_detector.py  test_gates.py  test_groq_provider.py  test_infra_engine.py  test_infra_specs.py  test_install_hook.py  test_pr_runner.py  test_pyspark_rule_engine.py  test_quellgraph_builder.py  test_quellgraph_query.py  test_rule_engine.py  test_scaffold.py  test_sdk.py  test_sync_module.py  test_verifier.py
