[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quelltest"
version = "2.0.0"
description = "Your code says what it should do. Quell proves it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shashank Bindal", email = "bindalshashank.89@gmail.com" }]
keywords = [
    "testing", "test-generation", "docstring", "pydantic",
    "verified-tests", "tdd", "pytest", "specification-testing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "libcst>=1.8.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
pyspark = ["pyspark>=3.4.0"]
# LLM fallback via Groq (spec7 §3) — pip install quelltest[groq]
groq = ["groq>=0.9.0"]
# OS keyring for secure credential storage — pip install quelltest[keyring]
keyring = ["keyring>=24.0.0"]
# Everything for LLM-powered features — pip install quelltest[llm]
llm = ["groq>=0.9.0", "keyring>=24.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
]

[project.scripts]
quell = "quell.cli:app"

[project.urls]
Homepage = "https://quell.buildsbyshashank.tech"
Documentation = "https://quell.buildsbyshashank.tech/docs"
Repository = "https://github.com/shashank7109/quelltest_lib"

[tool.hatch.build.targets.wheel]
packages = ["quell"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Auto-generated quell self-scan stubs — don't enforce import style here
"quell/tests/*.py" = ["E501", "F401", "F811", "I001", "I002"]
# SVG template strings are intentionally long
"quell/core/confidence/badge.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "quell.core.generator",
    "quell.core.analyzer",
    "quell.adapters.*",
    "quell.ci.*",
    "quell.github",
    "quell.github.*",
    "quell.llm.*",
    "quell.mcp_server",
    "quell.repair.*",
    "quell.score.*",
    "quell.ui.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["tests/fixtures"]

[tool.quell]
llm_provider = "anthropic"
llm_model = "claude-sonnet-4-5"
max_verification_attempts = 3
verification_timeout_seconds = 30
auto_write = false
enable_docstring = true
enable_types = true
enable_mutations = false
score_threshold = 0.0

[dependency-groups]
dev = [
    "twine>=6.2.0",
]
